--- a/index.html
+++ b/index.html
@@ -12,132 +12,152 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Modern-normalize CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <!-- Add CSS  -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка -->
     <header>
-      <a href="./index.html" class="logo">Web<span class="logo_head">Studio</span></a>
-      <nav>
-        <ul class="header_nav">
-          <li class="item">
-            <a href="./index.html" class="link">Студия</a>
-          </li>
-          <li class="item">
-            <a href="./portfolio.html" class="link">Портфолио</a>
-          </li>
-          <li class="item">
-            <a href="#" class="link">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="contact_list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <div class="container">
+        <div class="site-nav">
+          <a href="./index.html" class="logo">Web<span class="logo_head">Studio</span></a>
+          <nav class="site-nav">
+            <ul class="header_nav">
+              <li class="item">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="item">
+                <a href="./portfolio.html" class="link">Портфолио</a>
+              </li>
+              <li class="item">
+                <a href="#" class="link">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="contact_list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
+    <!-- Основа сайта -->
     <main>
       <!-- Банер -->
-      <section class="banner">
-        <h1 class="tittle">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button type="button" class="btn">Заказать услугу</button>
+      <section class="section banner">
+        <div class="container">
+          <h1 class="banner-tittle">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button type="button" class="banner-btn">Заказать услугу</button>
+        </div>
       </section>
-      <!-- Peculiarities -->
-      <section class="peculiar">
-        <h2 class="hidden">Наши преимущества</h2>
-        <ul class="pec_list">
-          <li>
-            <h3 class="tittle">Внимание к деталям</h3>
-            <p class="text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="tittle">Пунктуальность</h3>
-            <p class="text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="tittle">Планирование</h3>
-            <p class="text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="tittle">Современные технологии</h3>
-            <p class="text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <!--  Преимущества -->
+      <section class="section peculiar">
+        <div class="container">
+          <h2 class="visually-hidden">Наши преимущества</h2>
+          <ul class="pec_list">
+            <li class="item">
+              <h3 class="tittle">Внимание к деталям</h3>
+              <p class="text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="tittle">Пунктуальность</h3>
+              <p class="text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="tittle">Планирование</h3>
+              <p class="text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="tittle">Современные технологии</h3>
+              <p class="text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <section class="our_work">
-        <h2 class="tittle">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img src="images/box1.jpg" alt="Разработка" width="370" />
-          </li>
-          <li>
-            <img src="images/box2.jpg" alt="Верстка" width="370" />
-          </li>
-          <li>
-            <img src="images/box3.jpg" alt="Визуализация" width="370" />
-          </li>
-        </ul>
+      <section class="section our_work">
+        <div class="container">
+          <h2 class="tittle">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li>
+              <img src="images/box1.jpg" alt="Разработка" width="370" />
+            </li>
+            <li>
+              <img src="images/box2.jpg" alt="Верстка" width="370" />
+            </li>
+            <li>
+              <img src="images/box3.jpg" alt="Визуализация" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Наша команда -->
-      <section class="our_team">
-        <h2 class="tittle">Наша команда</h2>
-        <ul class="pers_cart">
-          <li>
-            <img src="images/per1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3 class="name">Игорь Демьяненко</h3>
-            <p class="prof">Product Designer</p>
-          </li>
-          <li>
-            <img src="images/per2.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="name">Ольга Репина</h3>
-            <p class="prof">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="images/per3.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="name">Николай Тарасов</h3>
-            <p class="prof">Marketing</p>
-          </li>
-          <li>
-            <img src="images/per4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3 class="name">Михаил Ермаков</h3>
-            <p class="prof">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section our_team">
+        <div class="container">
+          <h2 class="tittle">Наша команда</h2>
+          <ul class="pers_cart">
+            <li>
+              <img src="images/per1.jpg" alt="Игорь Демьяненко" width="270" />
+              <h3 class="name">Игорь Демьяненко</h3>
+              <p class="prof">Product Designer</p>
+            </li>
+            <li>
+              <img src="images/per2.jpg" alt="Ольга Репина" width="270" />
+              <h3 class="name">Ольга Репина</h3>
+              <p class="prof">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="images/per3.jpg" alt="Николай Тарасов" width="270" />
+              <h3 class="name">Николай Тарасов</h3>
+              <p class="prof">Marketing</p>
+            </li>
+            <li>
+              <img src="images/per4.jpg" alt="Михаил Ермаков" width="270" />
+              <h3 class="name">Михаил Ермаков</h3>
+              <p class="prof">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
-      <address class="address">
-        <ul class="list">
-          <li>
-            <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="link">+380961111111</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
+        <address class="address">
+          <ul class="list">
+            <li>
+              <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="link">+380961111111</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
