--- a/portfolio.html
+++ b/portfolio.html
@@ -12,139 +12,152 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Modern-normalize CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <!-- Add CSS  -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка -->
     <header>
-      <a href="./index.html" class="logo">Web<span class="logo_head">Studio</span></a>
-      <nav>
-        <ul class="header_nav">
-          <li class="item">
-            <a href="./index.html" class="link">Студия</a>
-          </li>
-          <li class="item">
-            <a href="./portfolio.html" class="link">Портфолио</a>
-          </li>
-          <li class="item">
-            <a href="#" class="link">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="contact_list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <div class="container">
+        <div class="site-nav">
+          <a href="./index.html" class="logo">Web<span class="logo_head">Studio</span></a>
+          <nav class="site-nav">
+            <ul class="header_nav">
+              <li class="item">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="item">
+                <a href="./portfolio.html" class="link">Портфолио</a>
+              </li>
+              <li class="item">
+                <a href="#" class="link">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="contact_list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
     <!-- Портфолио -->
     <main>
-      <section>
-        <h1 class="hidden">Портфолио</h1>
-        <ul class="pf_filter">
-          <li>
-            <button type="button" class="btn">Все</button>
-          </li>
-          <li>
-            <button type="button" class="btn">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="btn">Приложения</button>
-          </li>
-          <li>
-            <button type="button" class="btn">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="btn">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="pf_list">
-          <li class="pf_cart">
-            <a href="#" class="link">
-              <img src="./images/pf-img1.jpg" alt="" width="370" />
-              <p class="name">Технокряк</p>
-              <p class="item">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="pf_cart">
-            <a href="#" class="link">
-              <img src="./images/pf-img2.jpg" alt="" width="370" />
-              <p class="name">Постер New Orlean vs Golden Star</p>
-              <p class="item">Дизайн</p>
-            </a>
-          </li>
-          <li class="pf_cart">
-            <a href="#" class="link">
-              <img src="./images/pf-img3.jpg" alt="" width="370" />
-              <p class="name">Ресторан Seafood</p>
-              <p class="item">Приложение</p>
-            </a>
-          </li>
-          <li class="pf_cart">
-            <a href="#" class="link">
-              <img src="./images/pf-img4.jpg" alt="" width="370" />
-              <p class="name">Проект Prime</p>
-              <p class="item">Маркетинг</p>
-            </a>
-          </li>
-          <li class="pf_cart">
-            <a href="#" class="link">
-              <img src="./images/pf-img5.jpg" alt="" width="370" />
-              <p class="name">Проект Boxes</p>
-              <p class="item">Приложение</p>
-            </a>
-          </li>
-          <li class="pf_cart">
-            <a href="#" class="link">
-              <img src="./images/pf-img6.jpg" alt="" width="370" />
-              <p class="name">Inspiration has no Borders</p>
-              <p class="item">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="pf_cart">
-            <a href="#" class="link">
-              <img src="./images/pf-img7.jpg" alt="" width="370" />
-              <p class="name">Издание Limited Edition</p>
-              <p class="item">Дизайн</p>
-            </a>
-          </li>
-          <li class="pf_cart">
-            <a href="#" class="link">
-              <img src="./images/pf-img8.jpg" alt="" width="370" />
-              <p class="name">Проект LAB</p>
-              <p class="item">Маркетинг</p>
-            </a>
-          </li>
-          <li class="pf_cart">
-            <a href="#" class="link">
-              <img src="./images/pf-img9.jpg" alt="" width="370" />
-              <p class="name">Growing Business</p>
-              <p class="item">Приложение</p>
-            </a>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h1 class="visually-hidden">Портфолио</h1>
+          <ul class="pf_filter">
+            <li class="item">
+              <button type="button" class="btn">Все</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">Веб-сайты</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">Приложения</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">Дизайн</button>
+            </li>
+            <li class="item">
+              <button type="button" class="btn">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="pf_list">
+            <li class="pf_cart">
+              <a href="#" class="link">
+                <img src="./images/pf-img1.jpg" alt="" width="370" />
+                <p class="name">Технокряк</p>
+                <p class="products">Веб-сайт</p>
+              </a>
+            </li>
+            <li class="pf_cart">
+              <a href="#" class="link">
+                <img src="./images/pf-img2.jpg" alt="" width="370" />
+                <p class="name">Постер New Orlean vs Golden Star</p>
+                <p class="products">Дизайн</p>
+              </a>
+            </li>
+            <li class="pf_cart">
+              <a href="#" class="link">
+                <img src="./images/pf-img3.jpg" alt="" width="370" />
+                <p class="name">Ресторан Seafood</p>
+                <p class="products">Приложение</p>
+              </a>
+            </li>
+            <li class="pf_cart">
+              <a href="#" class="link">
+                <img src="./images/pf-img4.jpg" alt="" width="370" />
+                <p class="name">Проект Prime</p>
+                <p class="products">Маркетинг</p>
+              </a>
+            </li>
+            <li class="pf_cart">
+              <a href="#" class="link">
+                <img src="./images/pf-img5.jpg" alt="" width="370" />
+                <p class="name">Проект Boxes</p>
+                <p class="products">Приложение</p>
+              </a>
+            </li>
+            <li class="pf_cart">
+              <a href="#" class="link">
+                <img src="./images/pf-img6.jpg" alt="" width="370" />
+                <p class="name">Inspiration has no Borders</p>
+                <p class="products">Веб-сайт</p>
+              </a>
+            </li>
+            <li class="pf_cart">
+              <a href="#" class="link">
+                <img src="./images/pf-img7.jpg" alt="" width="370" />
+                <p class="name">Издание Limited Edition</p>
+                <p class="products">Дизайн</p>
+              </a>
+            </li>
+            <li class="pf_cart">
+              <a href="#" class="link">
+                <img src="./images/pf-img8.jpg" alt="" width="370" />
+                <p class="name">Проект LAB</p>
+                <p class="products">Маркетинг</p>
+              </a>
+            </li>
+            <li class="pf_cart">
+              <a href="#" class="link">
+                <img src="./images/pf-img9.jpg" alt="" width="370" />
+                <p class="name">Growing Business</p>
+                <p class="products">Приложение</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
-      <address class="address">
-        <ul class="list">
-          <li>
-            <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="link">+380961111111</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
+        <address class="address">
+          <ul class="list">
+            <li>
+              <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="link">+380961111111</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
