Добавляет стили flex страницы Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Шапка -->
     <header>
-      <div class="container">
+      <div class="container head_line">
         <div class="site-nav">
           <a href="./index.html" class="logo">Web<span class="logo_head">Studio</span></a>
           <nav class="site-nav">
@@ -76,64 +76,82 @@
             <li class="pf_cart">
               <a href="#" class="link">
                 <img src="./images/pf-img1.jpg" alt="" width="370" />
-                <p class="name">Технокряк</p>
-                <p class="products">Веб-сайт</p>
+                <div class="cart_text">
+                  <p class="name">Технокряк</p>
+                  <p class="products">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="pf_cart">
               <a href="#" class="link">
                 <img src="./images/pf-img2.jpg" alt="" width="370" />
-                <p class="name">Постер New Orlean vs Golden Star</p>
-                <p class="products">Дизайн</p>
+                <div class="cart_text">
+                  <p class="name">Постер New Orlean vs Golden Star</p>
+                  <p class="products">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="pf_cart">
               <a href="#" class="link">
                 <img src="./images/pf-img3.jpg" alt="" width="370" />
-                <p class="name">Ресторан Seafood</p>
-                <p class="products">Приложение</p>
+                <div class="cart_text">
+                  <p class="name">Ресторан Seafood</p>
+                  <p class="products">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="pf_cart">
               <a href="#" class="link">
                 <img src="./images/pf-img4.jpg" alt="" width="370" />
-                <p class="name">Проект Prime</p>
-                <p class="products">Маркетинг</p>
+                <div class="cart_text">
+                  <p class="name">Проект Prime</p>
+                  <p class="products">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="pf_cart">
               <a href="#" class="link">
                 <img src="./images/pf-img5.jpg" alt="" width="370" />
-                <p class="name">Проект Boxes</p>
-                <p class="products">Приложение</p>
+                <div class="cart_text">
+                  <p class="name">Проект Boxes</p>
+                  <p class="products">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="pf_cart">
               <a href="#" class="link">
                 <img src="./images/pf-img6.jpg" alt="" width="370" />
-                <p class="name">Inspiration has no Borders</p>
-                <p class="products">Веб-сайт</p>
+                <div class="cart_text">
+                  <p class="name">Inspiration has no Borders</p>
+                  <p class="products">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="pf_cart">
               <a href="#" class="link">
                 <img src="./images/pf-img7.jpg" alt="" width="370" />
-                <p class="name">Издание Limited Edition</p>
-                <p class="products">Дизайн</p>
+                <div class="cart_text">
+                  <p class="name">Издание Limited Edition</p>
+                  <p class="products">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="pf_cart">
               <a href="#" class="link">
                 <img src="./images/pf-img8.jpg" alt="" width="370" />
-                <p class="name">Проект LAB</p>
-                <p class="products">Маркетинг</p>
+                <div class="cart_text">
+                  <p class="name">Проект LAB</p>
+                  <p class="products">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="pf_cart">
               <a href="#" class="link">
                 <img src="./images/pf-img9.jpg" alt="" width="370" />
-                <p class="name">Growing Business</p>
-                <p class="products">Приложение</p>
+                <div class="cart_text">
+                  <p class="name">Growing Business</p>
+                  <p class="products">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
