--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@
         </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <section class="section our_work">
+      <section class="section">
         <div class="container">
-          <h2 class="tittle">Чем мы занимаемся</h2>
-          <ul class="list">
-            <li>
+          <h2 class="work_tittle">Чем мы занимаемся</h2>
+          <ul class="work_list">
+            <li class="item">
               <img src="images/box1.jpg" alt="Разработка" width="370" />
             </li>
-            <li>
+            <li class="item">
               <img src="images/box2.jpg" alt="Верстка" width="370" />
             </li>
-            <li>
+            <li class="item">
               <img src="images/box3.jpg" alt="Визуализация" width="370" />
             </li>
           </ul>
@@ -116,25 +116,33 @@
         <div class="container">
           <h2 class="tittle">Наша команда</h2>
           <ul class="pers_cart">
-            <li>
-              <img src="images/per1.jpg" alt="Игорь Демьяненко" width="270" />
-              <h3 class="name">Игорь Демьяненко</h3>
-              <p class="prof">Product Designer</p>
+            <li class="item">
+              <img class="photo" src="images/per1.jpg" alt="Игорь Демьяненко" width="270" />
+              <div class="cart_text">
+                <h3 class="name">Игорь Демьяненко</h3>
+                <p class="prof">Product Designer</p>
+              </div>
             </li>
-            <li>
-              <img src="images/per2.jpg" alt="Ольга Репина" width="270" />
-              <h3 class="name">Ольга Репина</h3>
-              <p class="prof">Frontend Developer</p>
+            <li class="item">
+              <img class="photo" src="images/per2.jpg" alt="Ольга Репина" width="270" />
+              <div class="cart_text">
+                <h3 class="name">Ольга Репина</h3>
+                <p class="prof">Frontend Developer</p>
+              </div>
             </li>
-            <li>
-              <img src="images/per3.jpg" alt="Николай Тарасов" width="270" />
-              <h3 class="name">Николай Тарасов</h3>
-              <p class="prof">Marketing</p>
+            <li class="item">
+              <img class="photo" src="images/per3.jpg" alt="Николай Тарасов" width="270" />
+              <div class="cart_text">
+                <h3 class="name">Николай Тарасов</h3>
+                <p class="prof">Marketing</p>
+              </div>
             </li>
-            <li>
-              <img src="images/per4.jpg" alt="Михаил Ермаков" width="270" />
-              <h3 class="name">Михаил Ермаков</h3>
-              <p class="prof">UI Designer</p>
+            <li class="item">
+              <img class="photo" src="images/per4.jpg" alt="Михаил Ермаков" width="270" />
+              <div class="cart_text">
+                <h3 class="name">Михаил Ермаков</h3>
+                <p class="prof">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
