Добавляет файлы и изменения из ДЗ№3

--- a/index.html
+++ b/index.html
@@ -22,32 +22,30 @@
   </head>
   <body>
     <!-- Шапка -->
-    <header>
-      <div class="container">
-        <div class="site-nav">
-          <a href="./index.html" class="logo">Web<span class="logo_head">Studio</span></a>
-          <nav class="site-nav">
-            <ul class="header_nav">
-              <li class="item">
-                <a href="./index.html" class="link">Студия</a>
-              </li>
-              <li class="item">
-                <a href="./portfolio.html" class="link">Портфолио</a>
-              </li>
-              <li class="item">
-                <a href="#" class="link">Контакты</a>
-              </li>
-            </ul>
-          </nav>
-          <ul class="contact_list">
+    <header class="site_header">
+      <div class="container site-nav">
+        <a href="./index.html" class="logo">Web<span class="logo_head">Studio</span></a>
+        <nav class="site-nav">
+          <ul class="header_nav">
             <li class="item">
-              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+              <a href="./index.html" class="link accent_nav">Студия</a>
             </li>
             <li class="item">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item">
+              <a href="#" class="link">Контакты</a>
             </li>
           </ul>
-        </div>
+        </nav>
+        <ul class="contact_list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </div>
     </header>
     <!-- Основа сайта -->
@@ -153,14 +151,12 @@
       <div class="container">
         <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
         <address class="address">
+          <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="list">
-            <li>
-              <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
-            </li>
-            <li>
+            <li class="footer_contact">
               <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="footer_contact">
               <a href="tel:+380961111111" class="link">+380961111111</a>
             </li>
           </ul>
