--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <!-- Шапка -->
-    <header>
-      <div class="container head_line">
+    <header class="site_header">
+      <div class="container">
         <div class="site-nav">
           <a href="./index.html" class="logo">Web<span class="logo_head">Studio</span></a>
           <nav class="site-nav">
@@ -32,7 +32,7 @@
                 <a href="./index.html" class="link">Студия</a>
               </li>
               <li class="item">
-                <a href="./portfolio.html" class="link">Портфолио</a>
+                <a href="./portfolio.html" class="link accent_nav">Портфолио</a>
               </li>
               <li class="item">
                 <a href="#" class="link">Контакты</a>
@@ -77,7 +77,7 @@
               <a href="#" class="link">
                 <img src="./images/pf-img1.jpg" alt="" width="370" />
                 <div class="cart_text">
-                  <p class="name">Технокряк</p>
+                  <h2 class="name">Технокряк</h2>
                   <p class="products">Веб-сайт</p>
                 </div>
               </a>
@@ -86,7 +86,7 @@
               <a href="#" class="link">
                 <img src="./images/pf-img2.jpg" alt="" width="370" />
                 <div class="cart_text">
-                  <p class="name">Постер New Orlean vs Golden Star</p>
+                  <h2 class="name">Постер New Orlean vs Golden Star</h2>
                   <p class="products">Дизайн</p>
                 </div>
               </a>
@@ -95,7 +95,7 @@
               <a href="#" class="link">
                 <img src="./images/pf-img3.jpg" alt="" width="370" />
                 <div class="cart_text">
-                  <p class="name">Ресторан Seafood</p>
+                  <h2 class="name">Ресторан Seafood</h2>
                   <p class="products">Приложение</p>
                 </div>
               </a>
@@ -104,7 +104,7 @@
               <a href="#" class="link">
                 <img src="./images/pf-img4.jpg" alt="" width="370" />
                 <div class="cart_text">
-                  <p class="name">Проект Prime</p>
+                  <h2 class="name">Проект Prime</h2>
                   <p class="products">Маркетинг</p>
                 </div>
               </a>
@@ -113,7 +113,7 @@
               <a href="#" class="link">
                 <img src="./images/pf-img5.jpg" alt="" width="370" />
                 <div class="cart_text">
-                  <p class="name">Проект Boxes</p>
+                  <h2 class="name">Проект Boxes</h2>
                   <p class="products">Приложение</p>
                 </div>
               </a>
@@ -122,8 +122,8 @@
               <a href="#" class="link">
                 <img src="./images/pf-img6.jpg" alt="" width="370" />
                 <div class="cart_text">
-                  <p class="name">Inspiration has no Borders</p>
-                  <p class="products">Веб-сайт</p>
+                  <h2 class="name">Inspiration has no Borders</h2>
+                  <hp class="products">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -131,8 +131,8 @@
               <a href="#" class="link">
                 <img src="./images/pf-img7.jpg" alt="" width="370" />
                 <div class="cart_text">
-                  <p class="name">Издание Limited Edition</p>
-                  <p class="products">Дизайн</p>
+                  <h2 class="name">Издание Limited Edition</h2>
+                  <hp class="products">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -140,7 +140,7 @@
               <a href="#" class="link">
                 <img src="./images/pf-img8.jpg" alt="" width="370" />
                 <div class="cart_text">
-                  <p class="name">Проект LAB</p>
+                  <h2 class="name">Проект LAB</h2>
                   <p class="products">Маркетинг</p>
                 </div>
               </a>
@@ -149,7 +149,7 @@
               <a href="#" class="link">
                 <img src="./images/pf-img9.jpg" alt="" width="370" />
                 <div class="cart_text">
-                  <p class="name">Growing Business</p>
+                  <h2 class="name">Growing Business</h2>
                   <p class="products">Приложение</p>
                 </div>
               </a>
@@ -163,14 +163,12 @@
       <div class="container">
         <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
         <address class="address">
+          <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="list">
-            <li>
-              <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
-            </li>
-            <li>
+            <li class="footer_contact">
               <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="footer_contact">
               <a href="tel:+380961111111" class="link">+380961111111</a>
             </li>
           </ul>
