--- a/index.html
+++ b/index.html
@@ -40,10 +40,18 @@
         </nav>
         <ul class="contact_list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link"
+              ><svg class="icon-mail" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-mail"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link"
+              ><svg class="icon-phone" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-phone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -66,24 +74,44 @@
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="pec_list">
             <li class="item">
+              <div class="pec_box">
+                <svg class="pec_icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="tittle">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="item">
+              <div class="pec_box clock">
+                <svg class="pec_icon">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="tittle">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="item">
+              <div class="pec_box diagram">
+                <svg class="pec_icon">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="tittle">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="item">
+              <div class="pec_box cosmo">
+                <svg class="pec_icon">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="tittle">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -119,6 +147,28 @@
               <div class="cart_text">
                 <h3 class="name">Игорь Демьяненко</h3>
                 <p class="prof">Product Designer</p>
+                <div class="pers_sociallink">
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -126,6 +176,28 @@
               <div class="cart_text">
                 <h3 class="name">Ольга Репина</h3>
                 <p class="prof">Frontend Developer</p>
+                <div class="pers_sociallink">
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -133,6 +205,28 @@
               <div class="cart_text">
                 <h3 class="name">Николай Тарасов</h3>
                 <p class="prof">Marketing</p>
+                <div class="pers_sociallink">
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -140,7 +234,67 @@
               <div class="cart_text">
                 <h3 class="name">Михаил Ермаков</h3>
                 <p class="prof">UI Designer</p>
+                <div class="pers_sociallink">
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a class="sociallink" href="#">
+                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Постоянные клиенты -->
+      <section class="section">
+        <div class="container">
+          <h2 class="tittle our_client">Постоянные клиенты</h2>
+          <ul class="client_list">
+            <li class="client_item">
+              <svg class="client_icon" width="41" height="46.7">
+                <use href="./images/icons.svg#icon-client1"></use>
+              </svg>
+            </li>
+            <li class="client_item">
+              <svg class="client_icon" width="40" height="52">
+                <use href="./images/icons.svg#icon-client2"></use>
+              </svg>
+            </li>
+            <li class="client_item">
+              <svg class="client_icon" width="43.46" height="41.18">
+                <use href="./images/icons.svg#icon-client3"></use>
+              </svg>
+            </li>
+            <li class="client_item">
+              <svg class="client_icon" width="84.44" height="40.62">
+                <use href="./images/icons.svg#icon-client4"></use>
+              </svg>
+            </li>
+            <li class="client_item">
+              <svg class="client_icon" width="62.54" height="45.43">
+                <use href="./images/icons.svg#icon-client5"></use>
+              </svg>
+            </li>
+            <li class="client_item">
+              <svg class="client_icon" width="93.79" height="43.93">
+                <use href="./images/icons.svg#icon-client6"></use>
+              </svg>
             </li>
           </ul>
         </div>
