Добавляет футер т ховеры

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
           </ul>
           <ul class="pf_list">
             <li class="pf_cart">
-              <a href="#" class="link">
+              <a href="#" class="pf_link">
                 <img src="./images/pf-img1.jpg" alt="" width="370" />
                 <div class="cart_text">
                   <h2 class="name">Технокряк</h2>
@@ -83,7 +83,7 @@
               </a>
             </li>
             <li class="pf_cart">
-              <a href="#" class="link">
+              <a href="#" class="pf_link">
                 <img src="./images/pf-img2.jpg" alt="" width="370" />
                 <div class="cart_text">
                   <h2 class="name">Постер New Orlean vs Golden Star</h2>
@@ -92,7 +92,7 @@
               </a>
             </li>
             <li class="pf_cart">
-              <a href="#" class="link">
+              <a href="#" class="pf_link">
                 <img src="./images/pf-img3.jpg" alt="" width="370" />
                 <div class="cart_text">
                   <h2 class="name">Ресторан Seafood</h2>
@@ -101,7 +101,7 @@
               </a>
             </li>
             <li class="pf_cart">
-              <a href="#" class="link">
+              <a href="#" class="pf_link">
                 <img src="./images/pf-img4.jpg" alt="" width="370" />
                 <div class="cart_text">
                   <h2 class="name">Проект Prime</h2>
@@ -110,7 +110,7 @@
               </a>
             </li>
             <li class="pf_cart">
-              <a href="#" class="link">
+              <a href="#" class="pf_link">
                 <img src="./images/pf-img5.jpg" alt="" width="370" />
                 <div class="cart_text">
                   <h2 class="name">Проект Boxes</h2>
@@ -119,25 +119,25 @@
               </a>
             </li>
             <li class="pf_cart">
-              <a href="#" class="link">
+              <a href="#" class="pf_link">
                 <img src="./images/pf-img6.jpg" alt="" width="370" />
                 <div class="cart_text">
                   <h2 class="name">Inspiration has no Borders</h2>
-                  <hp class="products">Веб-сайт</p>
+                  <p class="products">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="pf_cart">
-              <a href="#" class="link">
+              <a href="#" class="pf_link">
                 <img src="./images/pf-img7.jpg" alt="" width="370" />
                 <div class="cart_text">
                   <h2 class="name">Издание Limited Edition</h2>
-                  <hp class="products">Дизайн</p>
+                  <p class="products">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="pf_cart">
-              <a href="#" class="link">
+              <a href="#" class="pf_link">
                 <img src="./images/pf-img8.jpg" alt="" width="370" />
                 <div class="cart_text">
                   <h2 class="name">Проект LAB</h2>
@@ -146,7 +146,7 @@
               </a>
             </li>
             <li class="pf_cart">
-              <a href="#" class="link">
+              <a href="#" class="pf_link">
                 <img src="./images/pf-img9.jpg" alt="" width="370" />
                 <div class="cart_text">
                   <h2 class="name">Growing Business</h2>
@@ -161,18 +161,55 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
-        <address class="address">
-          <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="list">
-            <li class="footer_contact">
-              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li class="footer_contact">
-              <a href="tel:+380961111111" class="link">+380961111111</a>
-            </li>
-          </ul>
-        </address>
+        <div class="footer_box">
+          <div class="item">
+            <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
+            <address class="address">
+              <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
+              <ul class="list">
+                <li class="footer_contact">
+                  <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                </li>
+                <li class="footer_contact">
+                  <a href="tel:+380961111111" class="link">+380961111111</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="item">
+            <p class="ftr_text">ПРИСОЕДЕНЯЙТЕСЬ</p>
+            <ul class="ftr_soclist">
+              <li class="ftr_item">
+                <a class="ftr_sociallink" href="#">
+                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr_item">
+                <a class="ftr_sociallink" href="#">
+                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr_item">
+                <a class="ftr_sociallink" href="#">
+                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr_item">
+                <a class="ftr_sociallink" href="#">
+                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
