--- a/index.html
+++ b/index.html
@@ -267,34 +267,41 @@
           <h2 class="tittle our_client">Постоянные клиенты</h2>
           <ul class="client_list">
             <li class="client_item">
-              <svg class="client_icon" width="41" height="46.7">
-                <use href="./images/icons.svg#icon-client1"></use>
-              </svg>
+              <a class="client_link" href="#"
+                ><svg class="client_icon" width="41" height="46.7">
+                  <use href="./images/icons.svg#icon-client1"></use>
+                </svg>
+              </a>
             </li>
             <li class="client_item">
-              <svg class="client_icon" width="40" height="52">
-                <use href="./images/icons.svg#icon-client2"></use>
-              </svg>
+              <a class="client_link" href=""
+                ><svg class="client_icon" width="40" height="52">
+                  <use href="./images/icons.svg#icon-client2"></use></svg
+              ></a>
             </li>
             <li class="client_item">
-              <svg class="client_icon" width="43.46" height="41.18">
-                <use href="./images/icons.svg#icon-client3"></use>
-              </svg>
+              <a class="client_link" href=""
+                ><svg class="client_icon" width="43.46" height="41.18">
+                  <use href="./images/icons.svg#icon-client3"></use></svg
+              ></a>
             </li>
             <li class="client_item">
-              <svg class="client_icon" width="84.44" height="40.62">
-                <use href="./images/icons.svg#icon-client4"></use>
-              </svg>
+              <a class="client_link" href=""
+                ><svg class="client_icon" width="84.44" height="40.62">
+                  <use href="./images/icons.svg#icon-client4"></use></svg
+              ></a>
             </li>
             <li class="client_item">
-              <svg class="client_icon" width="62.54" height="45.43">
-                <use href="./images/icons.svg#icon-client5"></use>
-              </svg>
+              <a class="client_link" href=""
+                ><svg class="client_icon" width="62.54" height="45.43">
+                  <use href="./images/icons.svg#icon-client5"></use></svg
+              ></a>
             </li>
             <li class="client_item">
-              <svg class="client_icon" width="93.79" height="43.93">
-                <use href="./images/icons.svg#icon-client6"></use>
-              </svg>
+              <a class="client_link" href=""
+                ><svg class="client_icon" width="93.79" height="43.93">
+                  <use href="./images/icons.svg#icon-client6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -303,18 +310,55 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
-        <address class="address">
-          <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="list">
-            <li class="footer_contact">
-              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li class="footer_contact">
-              <a href="tel:+380961111111" class="link">+380961111111</a>
-            </li>
-          </ul>
-        </address>
+        <div class="footer_box">
+          <div class="item">
+            <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
+            <address class="address">
+              <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
+              <ul class="list">
+                <li class="footer_contact">
+                  <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                </li>
+                <li class="footer_contact">
+                  <a href="tel:+380961111111" class="link">+380961111111</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="item">
+            <p class="ftr_text">ПРИСОЕДЕНЯЙТЕСЬ</p>
+            <ul class="ftr_soclist">
+              <li class="ftr_item">
+                <a class="ftr_sociallink" href="#">
+                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr_item">
+                <a class="ftr_sociallink" href="#">
+                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr_item">
+                <a class="ftr_sociallink" href="#">
+                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="ftr_item">
+                <a class="ftr_sociallink" href="#">
+                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
